UI changes, creates profile route and replace / route with home

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     </button>
     
     <!-- App Title -->
-    <a [href]="'/'" class="app_title">{{ "app_title" | translate }}</a>
+    <a [href]="'/home'" class="app_title">{{ "app_title" | translate }}</a>
 
     <!-- <span class="spacer"></span> -->
 
