--- a/src/app/dialogs/change-password-dialog/change-password-dialog.component.html
+++ b/src/app/dialogs/change-password-dialog/change-password-dialog.component.html
@@ -1,33 +1,41 @@
-<h1 mat-dialog-title>{{ "change_password" | translate }}</h1>
-<div mat-dialog-content>
-  <form [formGroup]="passwordForm" (ngSubmit)="changePassword()">
-    <mat-form-field appearance="fill">
-      <mat-label>{{ "current_password" | translate }}</mat-label>
-      <input matInput formControlName="currentPassword" type="password" required>
-      <mat-error *ngIf="passwordForm.controls['currentPassword'].hasError('required')">
-        {{ "field_required" | translate }}
-      </mat-error>
-    </mat-form-field>
+<div class="dialog-container">
+  <i class="icon fa fa-lock"></i>
+  <h1 mat-dialog-title class="dialog-title">{{ "change_password" | translate }}</h1>
+  <p class="card-text">{{ "update_password" | translate }}</p>
 
-    <mat-form-field appearance="fill">
-      <mat-label>{{ "new_password" | translate }}</mat-label>
-      <input matInput formControlName="newPassword" type="password" required>
-      <mat-error *ngIf="passwordForm.controls['newPassword'].hasError('required')">
-        {{ "field_required" | translate }}
-      </mat-error>
-    </mat-form-field>
+  <div mat-dialog-content class="dialog-content">
+    <form [formGroup]="passwordForm" (ngSubmit)="changePassword()">
+      <mat-form-field appearance="fill">
+        <mat-label>{{ "current_password" | translate }}</mat-label>
+        <input matInput [type]="hideCurrentPassword ? 'password' : 'text'" formControlName="currentPassword" type="password" required>
+        <mat-icon matSuffix (click)="hideCurrentPassword = !hideCurrentPassword" class="mat-suffix">{{ hideCurrentPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+        <mat-error *ngIf="passwordForm.controls['currentPassword'].hasError('required')">
+          {{ "field_required" | translate }}
+        </mat-error>
+      </mat-form-field>
 
-    <mat-form-field appearance="fill">
-      <mat-label>{{ "gen_check_confirm_password" | translate }}</mat-label>
-      <input matInput formControlName="confirmPassword" type="password" required>
-      <mat-error *ngIf="passwordForm.controls['confirmPassword'].hasError('required')">
-        {{ "field_required" | translate }}
-      </mat-error>
-    </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>{{ "new_password" | translate }}</mat-label>
+        <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="newPassword" type="password" required>
+        <mat-icon matSuffix (click)="hidePassword = !hidePassword" class="mat-suffix">{{ hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+        <mat-error *ngIf="passwordForm.controls['newPassword'].hasError('required')">
+          {{ "field_required" | translate }}
+        </mat-error>
+      </mat-form-field>
 
-    <div mat-dialog-actions>
-      <button class="btn confirm" mat-button [mat-dialog-close]="true" type="submit">{{ "gen_confirm" | translate }}</button>
-      <button class="btn cancel" mat-button mat-dialog-close>{{ "gen_cancel" | translate }}</button>
-    </div>
-  </form>
+      <mat-form-field appearance="fill">
+        <mat-label>{{ "gen_check_confirm_password" | translate }}</mat-label>
+        <input matInput [type]="hideConfirmPassword ? 'password' : 'text'" formControlName="confirmPassword" type="password" required>
+        <mat-icon matSuffix (click)="hideConfirmPassword = !hideConfirmPassword" class="mat-suffix">{{ hideConfirmPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+        <mat-error *ngIf="passwordForm.controls['confirmPassword'].hasError('required')">
+          {{ "field_required" | translate }}
+        </mat-error>
+      </mat-form-field>
+
+      <div mat-dialog-actions class="dialog-buttons">
+        <button class="btn confirm" mat-button (click)="changePassword()">{{ "gen_confirm" | translate }}</button>
+        <button class="btn cancel" mat-button mat-dialog-close>{{ "gen_cancel" | translate }}</button>
+      </div>
+    </form>
+  </div>
 </div>
