--- a/src/app/dialogs/change-password-dialog/change-password-dialog.component.less
+++ b/src/app/dialogs/change-password-dialog/change-password-dialog.component.less
@@ -1,24 +1,64 @@
 :host {
-    display: block;
-    margin: 0 auto;
-    max-width: 500px;
+  display  : block;
+  margin   : 0 auto;
+  max-width: 500px;
+}
+
+.dialog-title {
+  font-size:1.2vw;
+}
+
+mat-form-field {
+  width        : 100%;
+  margin-bottom: 16px;
+}
+
+mat-dialog-content {
+  padding: 24px;
+  display: flex;
+}
+
+.mat-suffix {
+  color: #0071aa;
+}
+
+.confirm {
+  font-size: 1rem;
+  height          : 5vh;
+  width           : 5vw;
+  background-color: #0071aa;
+  color           : #EEEEEE !important;
+
+  &:hover {
+    background-color: #005c8b;
+    color           : #EEEEEE;
   }
-  
-  mat-form-field {
-    width: 100%;
-    margin-bottom: 16px;
+}
+
+.cancel {
+  font-size: 1rem;
+  height          : 5vh;
+  width           : 5vw;
+  background-color: #a01616;
+  color           : #EEEEEE !important;
+
+  &:hover {
+    background-color: #8c1212;
+    color           : #EEEEEE;
   }
-  
-  mat-dialog-content {
-    padding: 24px;
-  }
-  
-  mat-dialog-actions {
-    justify-content: flex-end;
-    padding: 8px 24px 24px;
-  }
-  
-  button {
-    margin-left: 8px;
-  }
-  
+}
+
+.dialog-content {
+  display: flex;
+}
+
+.dialog-buttons {
+  justify-content: space-around;
+  font-size      : 3rem;
+}
+
+.icon {
+  padding-top: 1vh;
+  font-size   : 2rem;
+  color       : #0071aa!important;
+}
