--- a/src/app/routes/settings/settings.component.less
+++ b/src/app/routes/settings/settings.component.less
@@ -34,7 +34,7 @@
 
 .card-icon {
     font-size   : 2rem;
-    color       : #00ADB5;
+    color       : #0071aa;
     padding-left: 1rem;
 }
 
@@ -62,5 +62,5 @@
 }
 
 .card-button:hover {
-    background-color: #393E46;
+    background-color: #0071aa;
 }
