--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,8 +2,7 @@
 <div class="sidebar" [class.open]="isOpen" *ngIf="!isLoginRoute">
 
   <!-- Sidebar Main Items -->
-  <div class="sidebar-items" *ngFor="let item of items; let i = index" (click)="changeLocation(item.location)"
-       [style.margin-left.px]="i < 2 ? -3 : 0">
+  <div class="sidebar-items" *ngFor="let item of items; let i = index" (click)="changeLocation(item.location)">
     <i [ngClass]="item.icon"></i>
     <h3 class="item-style">
       {{ item.label | translate }}
