--- a/src/app/routes/user/login/login.component.html
+++ b/src/app/routes/user/login/login.component.html
@@ -14,8 +14,8 @@
 
                     <mat-form-field class="form-element" appearance="fill">
                         <mat-label>{{ "gen_password" | translate }}</mat-label>
-                        <input matInput formControlName="password" type="password" placeholder="{{ 'gen_password' | translate }}">
-                        <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" type="password" placeholder="{{ 'gen_password' | translate }}">
+                        <mat-icon matSuffix (click)="hidePassword = !hidePassword" class="mat-suffix">{{ hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
                         <mat-error *ngIf="">{{'error_required_error' | translate}}</mat-error>
                     </mat-form-field>
 
