--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar color="primary" *ngIf="!isLoginRoute" class="navbar-container">
   <mat-toolbar-row>
     
+
     <!-- Sidebar toggle button -->
-    <button class="sidebar-button" (click)="toggleSidebar()">
+    <button class="sidebar-button" *ngIf="features.sidebar.hasSidebar" (click)="toggleSidebar()">
       <span class="hamburger-icon">
         <span class="hamburger-line"></span>
         <span class="hamburger-line"></span>
@@ -13,12 +14,15 @@
     <!-- App Title -->
     <a [href]="'/home'" class="app_title">{{ "app_title" | translate }}</a>
 
-    <!-- <span class="spacer"></span> -->
-
-    <!-- Settings -->
-    <!-- <a class="nav-settings-btn" [href]="'/settings'">
-      <mat-icon>settings</mat-icon>
-    </a> -->
+    <div class="navbar-items-container">
+      <div class="navbar-items" *ngFor="let item of items" (click)="changeLocation(item.location)">
+        <i style="padding-right: 10px;" [ngClass]="item.icon"></i>
+        <h3 class="item-style">
+          {{ item.label | translate }}
+        </h3>
+      </div>
+    </div>
+    
 
   </mat-toolbar-row>
 </mat-toolbar>
