--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 
-<div class="sidebar" [class.open]="isOpen" *ngIf="!isLoginRoute">
+<div class="sidebar" [class.open]="isOpen">
 
   <!-- Sidebar Main Items -->
   <div class="sidebar-items" *ngFor="let item of items; let i = index" (click)="changeLocation(item.location)">
