--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,10 @@
 <mat-toolbar color="primary" *ngIf="!isLoginRoute" class="navbar-container">
-  <mat-toolbar-row>
+  <mat-toolbar-row class="navbar-content">
     
 
     <!-- Sidebar toggle button -->
     <button class="sidebar-button" *ngIf="features.sidebar.hasSidebar" (click)="toggleSidebar()">
-      <span class="hamburger-icon">
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-      </span>
+      <mat-icon class="sidebar-button-icon">menu</mat-icon>
     </button>
     
     <!-- App Title -->
