Preparing for new backend endpoints

--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -12,6 +12,7 @@
     align-items: center;
     height     : 100%;
     padding    : 0 10px;
+    justify-content: space-between;
 
     .sidebar-button {
       background     : none;
@@ -47,10 +48,7 @@
     .navbar-items-container {
       margin-left    : 5%;
       display        : flex;
-      align-items    : center;
       height         : 100%;
-      flex-grow      : 1;
-      justify-content: flex-start;
 
       .navbar-items {
         display    : flex;
