--- a/src/app/routes/user/login/login.component.less
+++ b/src/app/routes/user/login/login.component.less
@@ -107,6 +107,10 @@ a:hover {
     font-size: 1vw;
 }
 
-.mat-suffix {
+.mat-suffix, .mat-prefix {
     color: #00ADB5;
+
+    &:hover {
+        cursor: default;
+    }
 }
