--- a/src/app/routes/class-registration/class-registration.component.less
+++ b/src/app/routes/class-registration/class-registration.component.less
@@ -10,6 +10,9 @@
     border-radius: 8px;
     box-shadow: 0 4px 10px 0 rgba(0,0,0,0.1);
     padding: 30px;
+    margin-top: 10vh;
+    width: 40vw;
+    margin-left: 30vw;
   }
   
   .form-field-container {
