--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -71,6 +71,18 @@
           text-overflow: ellipsis;
         }
       }
+
+      .nav-settings-icon {
+        margin-top: 20px;
+        width: 2vw;
+        padding-left: 0.5vw;
+
+        &:hover {
+          cursor: pointer;
+          opacity: 0.5;
+          transition: 0.4s
+        }
+      }
     }
   }
 }
