--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -7,12 +7,11 @@
     <div class="registration-status">
       <h1 class="status-title">{{ "gen_reg_status" | translate }}</h1>
     </div>
-  
-    <div class="vertical-wave-container">
-      <svg xmlns="http://www.w3.org/2000/svg" class="vertical-wave" viewBox="0 0 1440 320">
-        <path fill="#222831" fill-opacity="1" d="M0,96L60,96C120,96,240,96,360,112C480,128,600,160,720,176C840,192,960,192,1080,186.7C1200,181,1320,171,1380,165.3L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
-      </svg>
+
+    <div class="class-registration-button">
+      <button class="button" (click)="changeLocation('class-registration')">
+        {{ "gen_class_reg" | translate }}
+      </button>
     </div>
-    <div class="background-color"></div>
   </div>
   
