--- a/src/app/routes/home/home.component.less
+++ b/src/app/routes/home/home.component.less
@@ -1,25 +1,13 @@
 .home-container {
-    position: relative;
-    overflow: hidden;
-    padding-top: 8.5%;
-    height: 100vh; /* Ensure it covers the full viewport height */
-  }
-  
-  .background-color {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 50vw; /* Cover the right half of the screen */
-    background-color: #222831;
-    z-index: 0;
-  }
-  
+  position: relative;
+  overflow: hidden;
+  padding-top: 8.5%;
+  height: 100vh;
+
   .intro-message {
     padding-left: 10%;
     position: relative;
-    z-index: 1;
-  
+
     .intro-title {
       font-size: 2.5rem;
     }
@@ -28,33 +16,20 @@
       font-size: 1.5rem;
     }
   }
-  
+
   .registration-status {
     padding-left: 10%;
     padding-top: 2%;
     position: relative;
-    z-index: 1;
-  
+
     .status-title {
       font-size: 1.5rem;
     }
   }
-  
-  .vertical-wave-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 50%; /* Adjust to start from the midpoint of the screen */
-    width: 50vw; /* Adjust as needed */
-    overflow: hidden;
-    z-index: 1;
-  }
-  
-  .vertical-wave {
+
+  .class-registration-button {
+    padding-top: 0.5%;
+    padding-left: 10%;
     position: relative;
-    display: block;
-    width: 100%;
-    height: 100%;
-    transform: rotate(90deg) translateY(-50%);
-    transform-origin: center;
   }
+}
