Add - Display footer only if we are in home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,5 @@
   </div>
 
   <!-- Footer -->
-  <app-footer *ngIf="features.footer.hasFooter"></app-footer>
+  <app-footer *ngIf="features.footer.hasFooter && isHomeRoute"></app-footer>
 </div>
