--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -58,7 +58,7 @@
         transition : background-color 0.3s;
 
         &:hover {
-          background-color: #0071aa;
+          background-color: #677a89;
           color           : #FFFFFF;
           cursor          : pointer;
         }
@@ -75,7 +75,7 @@
       .nav-settings-icon {
         margin-top: 20px;
         width: 2vw;
-        padding-left: 0.5vw;
+        text-align: center;
 
         &:hover {
           cursor: pointer;
