--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,6 +13,7 @@
             <a mat-list-item href="#">The Team</a>
             <a mat-list-item href="#">Careers</a>
             <a>test1</a>
+            test3
           </mat-nav-list>
         </div>
         <div class="link-section">
