--- a/src/app/routes/admin/admin/admin.component.less
+++ b/src/app/routes/admin/admin/admin.component.less
@@ -1,11 +1,11 @@
 .admin-container {
     width: 100%;
-    padding-top: 3.333vw;
+    padding-top: 5vh;
     display: flex;
 
     .admin-items-container {
-        width: 10%;
-        height: 93vh;
+        flex: 1 1 15%;
+        height: 95vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -13,7 +13,7 @@
 
         .admin-items {
             width: 100%;
-            padding-top: 1vw;
+            padding-top: 6%;
             list-style: none;
             text-align: left;
             display: flex;
@@ -25,7 +25,7 @@
                 width: 100%;
                 height: 50px;
                 display: flex;
-                padding-left: 20px;
+                padding-left: 1rem;
                 color: #FFFFFF;
                 align-items: center;
 
@@ -40,14 +40,20 @@
                 }
 
                 .admin-item-icon {
-                    width: 2vw;
-                    height: 24px;
-                    font-size: 1vw;
-                    padding-right: 1vw;
+                    width: 1.5rem;
+                    height: 1.5rem;
+                    font-size: 1rem;
+                    padding-right: 0.5rem;
                     line-height: 1.2;
                     margin-bottom: 0;
                 }
             }
         }
+    }
+
+    .admin-content-container {
+        flex: 1 1 85%;
+        height: 95vh;
+        padding: 1rem;
     }
 }
