--- a/src/app/routes/admin/admin/admin.component.less
+++ b/src/app/routes/admin/admin/admin.component.less
@@ -1,59 +1,95 @@
 .admin-container {
-    width: 100%;
+    width      : 100%;
     padding-top: 5vh;
-    display: flex;
+    display    : flex;
 
     .admin-items-container {
-        flex: 1 1 15%;
-        height: 95vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        flex            : 1 1 15%;
+        height          : 95vh;
+        display         : flex;
+        flex-direction  : column;
+        align-items     : center;
         background-color: #222831;
 
+        .admin-profile-container {
+            width     : 100%;
+            margin-top: 1rem;
+            padding   : 1rem;
+            color     : #fff;
+
+            .admin-profile-header {
+                display: flex;
+
+                .admin-profile-icon {
+                    width          : 1.5rem;
+                    display        : flex;
+                    justify-content: center;
+                    align-items    : center;
+                }
+
+                .admin-profile-name {
+                    margin-bottom: 0;
+                    padding-left : 1rem;
+                }
+            }
+
+            .admin-profile-role {
+                font-size   : 0.8rem;
+                padding-left: 2.5rem;
+            }
+        }
+
+        .admin-profile-name {
+            font-size  : 1.2rem;
+            font-weight: bold;
+        }
+
         .admin-items {
-            width: 100%;
-            padding-top: 6%;
-            list-style: none;
-            text-align: left;
-            display: flex;
+            width         : 100%;
+            list-style    : none;
+            text-align    : left;
+            display       : flex;
             flex-direction: column;
-            align-items: flex-start;
-            padding-left: 0;
+            align-items   : flex-start;
+            padding-left  : 0;
 
             .admin-item {
-                width: 100%;
-                height: 50px;
-                display: flex;
+                width       : 100%;
+                height      : 50px;
+                display     : flex;
                 padding-left: 1rem;
-                color: #FFFFFF;
-                align-items: center;
+                color       : #FFFFFF;
+                align-items : center;
 
                 &:hover {
                     background-color: #677a89;
-                    cursor: pointer;
-                    transition: 0.3s;
+                    cursor          : pointer;
+                    transition      : 0.3s;
                 }
 
                 .admin-item-text {
-                    text-align: left;
+                    text-align  : left;
+                    padding-left: 1rem;
                 }
 
                 .admin-item-icon {
-                    width: 1.5rem;
-                    height: 1.5rem;
-                    font-size: 1rem;
+                    width        : 1.5rem;
+                    height       : 1.5rem;
+                    font-size    : 1rem;
                     padding-right: 0.5rem;
-                    line-height: 1.2;
+                    line-height  : 1.2;
                     margin-bottom: 0;
+                    display: flex;
+                    justify-content: center;
+                    align-items    : center;
                 }
             }
         }
     }
 
     .admin-content-container {
-        flex: 1 1 85%;
-        height: 95vh;
+        flex   : 1 1 85%;
+        height : 95vh;
         padding: 1rem;
     }
 }
